--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.11.41",
     "@types/react": "^18.0.12",
+    "@types/react-big-calendar": "^0.38.0",
     "@types/react-dom": "^18.0.5",
     "react": "^18.2.0",
+    "react-big-calendar": "^0.40.2",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
